Add tkifm syntax highlighting.

--- a/progs/Makefile.am
+++ b/progs/Makefile.am
@@ -6,9 +6,9 @@ EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex scr2ifm
 
 EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl scr2ifm.pl
 
-tkifm: tkifm.tcl
+tkifm: ctext/ctext.tcl tkifm.tcl
 	echo '#! $(WISH) -f' > $@
-	cat $< >> $@
+	cat $^ >> $@
 	chmod +x $@
 
 scr2ifm: scr2ifm.pl
@@ -32,5 +32,7 @@ test:;	perl ifm2tex.pl -m test.ifm
 	for i in 1 2 3; do latex test.tex; done
 	dvips -o test.ps test.dvi
 	gv test.ps
+
+dist-hook:; cp -rp $(srcdir)/ctext $(distdir)
 
 include $(top_srcdir)/etc/Makefile.common
