--- a/progs/Makefile.in
+++ b/progs/Makefile.in
@@ -227,6 +227,9 @@ distdir: $(DISTFILES)
 	    || exit 1; \
 	  fi; \
 	done
+	$(MAKE) $(AM_MAKEFLAGS) \
+	  top_distdir="$(top_distdir)" distdir="$(distdir)" \
+	  dist-hook
 check-am: all-am
 check: check-am
 all-am: Makefile $(SCRIPTS)
@@ -314,9 +317,9 @@ uninstall-am: uninstall-binSCRIPTS uninstall-info-am
 	uninstall-binSCRIPTS uninstall-info-am
 
 
-tkifm: tkifm.tcl
+tkifm: ctext/ctext.tcl tkifm.tcl
 	echo '#! $(WISH) -f' > $@
-	cat $< >> $@
+	cat $^ >> $@
 	chmod +x $@
 
 scr2ifm: scr2ifm.pl
@@ -338,6 +341,8 @@ test:;	perl ifm2tex.pl -m test.ifm
 	for i in 1 2 3; do latex test.tex; done
 	dvips -o test.ps test.dvi
 	gv test.ps
+
+dist-hook:; cp -rp $(srcdir)/ctext $(distdir)
 
 log:;	@ echo
 	@ echo Finding source changes in the last $(DAYS) days...
