--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -92,6 +92,9 @@ RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+VARS_CFLAGS = @VARS_CFLAGS@
+VARS_CONFIG = @VARS_CONFIG@
+VARS_LIBS = @VARS_LIBS@
 VERSION = @VERSION@
 WISH = @WISH@
 YACC = @YACC@
