--- a/etc/config.h.in
+++ b/etc/config.h.in
@@ -33,6 +33,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Whether the Vars library is available */
+#undef HAVE_VARS
+
 /* Name of package */
 #undef PACKAGE
 
