--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,10 @@ AC_CONFIG_AUX_DIR(etc)
 AM_INIT_AUTOMAKE(foreign)
 AM_CONFIG_HEADER(etc/config.h)
 
+dnl Check for Vars library.
+AM_CONFIG_LIB(Vars, VARS, vars-config, 2.6,
+the Vars library is required -- get it from www.freewebtown.com/zondo/programs)
+
 dnl Check host system.
 AC_CANONICAL_HOST
 
@@ -37,9 +41,6 @@ AM_PROG_LIBTOOL
 
 dnl Checks for header files.
 AC_HEADER_STDC
-
-dnl Check for Vars library.
-AM_CONFIG_LIB(Vars, VARS, vars-config, 2.6)
 
 dnl Check for wish.
 AC_PATH_PROGS(WISH, wish8.0 wish80 wish, no)
