Remove support for unused stuff (gpp, expression, variable substitution).

--- a/Makefile.in
+++ b/Makefile.in
@@ -191,7 +191,8 @@ target_alias = @target_alias@
 tkifm = @tkifm@
 AUTOMAKE_OPTIONS = check-news
 ACLOCAL_AMFLAGS = -I etc
-SUBDIRS = fig gpp src lib doc progs demos tests
+SUBDIRS = fig src lib doc progs demos tests
+EXTRA_DIST = ANNOUNCE
 EXTRA_DIRS = etc contrib win32
 DAYS = 7
 all: all-recursive
