--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,8 +2,7 @@
 
 STYLES = helvetica.ifm puzzle.ifm reckless.ifm special.ifm verbose.ifm
 
-LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt \
-$(STYLES)
+LIBFILES = ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
 
 pkgdata_DATA = $(LIBFILES)
 
