--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -175,9 +175,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
 STYLES = helvetica.ifm puzzle.ifm reckless.ifm special.ifm verbose.ifm
-LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt \
-$(STYLES)
-
+LIBFILES = ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
 pkgdata_DATA = $(LIBFILES)
 EXTRA_DIST = $(LIBFILES)
 DAYS = 7
