--- a/configure.in
+++ b/configure.in
@@ -37,7 +37,7 @@ AC_PROG_YACC
 AM_PROG_LEX
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -78,7 +78,6 @@ Makefile
 demos/Makefile
 doc/Makefile
 fig/Makefile
-gpp/Makefile
 lib/Makefile
 progs/Makefile
 src/Makefile
