--- a/Makefile.in
+++ b/Makefile.in
@@ -175,7 +175,7 @@ tkifm = @tkifm@
 AUTOMAKE_OPTIONS = check-news
 ACLOCAL_AMFLAGS = -I etc
 SUBDIRS = fig src lib doc progs demos tests
-EXTRA_DIST = ANNOUNCE
+EXTRA_DIST = ANNOUNCE TO-DO
 EXTRA_DIRS = etc contrib win32
 DAYS = 7
 all: all-recursive
