--- a/doc/cover.ifm.in
+++ b/doc/cover.ifm.in
@@ -8,7 +8,7 @@ show_map_border = 1;
 map_border_colour = "grey90";
 map_background_colour = "grey90";
 
-room "IFM"; item "Version $version";
+room "IFM"; item "Version @VERSION@";
 
 room "Interactive"		dir w 2 s e oneway;
 room "Fiction"			dir e oneway;
