--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -162,7 +162,7 @@ test-nolink2.ifm test-nopath.ifm test-note.ifm test-path.ifm		    \
 test-simple.ifm test-unsafe.ifm
 
 IFM = $(top_builddir)/src/ifm $(ARGS)
-ARGS = -I$(top_srcdir)/lib -I$(top_builddir)/gpp
+ARGS = -I$(top_srcdir)/lib
 TKIFM = $(top_builddir)/progs/tkifm
 TESTS = $(SRCS:.ifm=.test)
 EXP = $(SRCS:.ifm=.exp)
