--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -192,7 +192,7 @@ FIG_BIN = $(top_builddir)/fig
 ifm_LDFLAGS = -L$(FIG_BIN)
 ifm_LDADD = -lfig $(VARS_LIBS) @LIBS@
 AM_YFLAGS = -d -v
-BASEPATH = $(pkgdatadir):$(pkglibdir)
+BASEPATH = $(pkgdatadir)
 @CYGWIN_FALSE@INITFILE = .ifmrc
 @CYGWIN_TRUE@INITFILE = ifm.ini
 @CYGWIN_FALSE@IFMPATH = $(BASEPATH)
