Use 'missing' with help2man.

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -162,7 +162,7 @@ man_MANS = ifm.1
 # Programs.
 IFM = $(top_srcdir)/src/ifm -s version="$(VERSION)"
 IFMCMD = $(IFM) -I $(top_srcdir)/lib
-HELP2MAN = help2man -N -n "$(MAN_TITLE)"
+HELP2MAN = $(top_srcdir)/etc/missing --run help2man -N -n "$(MAN_TITLE)"
 
 # General rules.
 SUFFIXES = .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex .rtf
