Use new vars iteration stuff.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -215,6 +215,7 @@ LINTCMD = $(LINT) $(LINTARGS) $(LINTLOCAL) $(LINTGLOBAL) $(LINTFLAGS)	\
 $(LINTDEFS)
 
 DAYS = 7
+CLEANFILES = *.output
 all: all-am
 
 .SUFFIXES:
@@ -439,6 +440,7 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
