--- a/fig/Makefile.in
+++ b/fig/Makefile.in
@@ -180,7 +180,7 @@ EXTRA_DIST = fig-format.txt
 INCLUDES = $(VARS_CFLAGS)
 testfig_SOURCES = testfig.c
 testfig_LDFLAGS = $(VARS_LIBS)
-testfig_LDADD = libfig.a -lvars-noinst -lm
+testfig_LDADD = libfig.a -lvars -lm
 CLEANFILES = test.fig* test.eps testfig
 DAYS = 7
 all: all-am
