--- a/Makefile.in
+++ b/Makefile.in
@@ -169,12 +169,13 @@ program_transform_name = @program_transform_name@
 sbindir = @sbindir@
 scr2ifm = @scr2ifm@
 sharedstatedir = @sharedstatedir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
 AUTOMAKE_OPTIONS = check-news
 ACLOCAL_AMFLAGS = -I etc
-SUBDIRS = fig src lib doc progs demos tests
+SUBDIRS = $(subdirs) fig src lib doc progs demos tests
 EXTRA_DIST = TO-DO
 EXTRA_DIRS = etc contrib win32
 DAYS = 7
